# typing-rush

./: AGENTS.md  README.md  architecture.md  index.html  package-lock.json  package.json  spec.md  task-spec.md  tasks.md  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.test.tsx  App.tsx  app-state.test.ts  app-state.ts  styles.css
src/content/: snippet-filter.test.ts  snippet-filter.ts  snippet-queue.test.ts  snippet-queue.ts  snippets.ts
src/engine/: input-judge.test.ts  input-judge.ts  score.ts  state-machine.test.ts  state-machine.ts  stats-base.ts  stats.test.ts  stats.ts
src/render/: canvas-renderer.test.ts  canvas-renderer.ts  theme.ts
src/storage/: record-aggregator.ts  results-store.ts  settings-store.ts  storage.test.ts
src/types/: game.ts  index.ts
src/ui/: sound.ts
src/ui/components/: BottomHint.tsx  HistoryPanel.tsx  HudPanel.tsx  PauseOverlay.tsx  TopBar.tsx
src/ui/formatters/: date-time.test.ts  date-time.ts
src/ui/screens/: CountdownScreen.tsx  GameScreen.tsx  MenuScreen.tsx  ResultScreen.tsx
