[package]
name = "typing-rush"
version = "0.1.0"
description = "Typing Rush desktop shell"
authors = ["typing-rush"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
